syntax = "proto3";

package example.v1;

option go_package = "example.com/gen/go/proto";

import "pagination.proto";

message ArticleSummary {
  string id = 1;
  string title = 2;
  string thumbnail = 3;
}

message Article {
  string id = 1;
  string title = 2;
  string thumbnail = 3;
  string content = 4;
}

message ListArticlesRequest {
  PaginationRequest pagination = 1;
}

message ListArticlesResponse {
  repeated ArticleSummary articles = 1;
  PaginationResponse pagination = 2;
}

message GetArticleRequest {
  string article_id = 1;
}

message GetArticleResponse {
  Article article = 1;
}

service ArticleService {
  rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse);
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
}